# hireloop

./: .editorconfig  .gitignore  CLAUDE.md  Justfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_phase1_schema.py  0002_phase2a_agent_eval_cv.py  0003_phase2b_stripe_webhooks.py  0004_phase2b1_subscription_columns.py  0005_phase2c_scanning_batch_pipeline.py  0006_phase2d_interview_prep_negotiation_feedback.py  0007_onboarding_collapse_preferences.py  0008_custom_auth.py  0009_profile_work_arrangement.py  0010_profile_identity_fields.py  0011_profile_personalisation_fields.py  0012_job_parsed_jd_json.py  0013_crossref_maps.py  0014_personalisation_audits.py
backend/scripts/: entrypoint.sh
backend/src/hireloop/: __init__.py  aws_lambda_adapter.py  config.py  db.py  logging.py  main.py
backend/src/hireloop/api/: applications.py  (+22 more)
backend/tests/: conftest.py
backend/tests/fixtures/: fake_anthropic.py  fake_gemini.py
backend/tests/integration/: _phase2d_fakes.py  test_agent_batch_tool.py  test_agent_scan_tool.py  test_agent_tools_phase2d.py  test_applications_crud.py  test_auth_flow.py  test_auth_middleware.py  test_batch_funnel.py  test_billing_endpoints.py  test_billing_paywall.py  test_conversations_crud.py  test_crossref_ensure.py  test_cv_outputs_create.py  test_cv_outputs_pdf.py  test_cv_outputs_regenerate.py  test_default_config_seed_onboarding.py  test_error_format.py  test_evaluation_cache.py  test_evaluations_create.py  test_evaluations_scoped.py  test_feedback_phase2d.py  test_feedback_service_validators.py  test_gdpr_export.py  test_health.py  test_interview_prep_flows.py  test_jd_extractor_ensure.py  test_job_parser.py  test_jobs_parse.py  test_jobs_parse_text_endpoint.py  test_negotiation_flows.py  test_onboarding_first_evaluation.py  test_personalisation_validator_persist.py  test_phase2a_smoke.py  test_phase2c_smoke.py  test_phase2d_smoke.py  test_profile_crud.py  test_profile_resume_text_endpoint.py  test_resume_upload.py  test_scanner_service_500_cap.py  test_scanner_service_adapter_failure.py  (+8 more)
backend/tests/unit/: test_anthropic_batch_client.py  test_anthropic_client.py  test_ashby_adapter.py  test_bridge_with_fallback.py  test_classifier.py  test_claude_scorer.py  test_config.py  test_crossref_extractor.py  test_cv_optimizer.py  test_cv_structure_extractor.py  test_email.py  test_gemini_client.py  test_grader.py  test_greenhouse_adapter.py  test_groq_client.py  test_interview_prep_extractor.py  test_interview_prep_gemini_dispatch.py  test_interview_prep_generator_prompt.py  test_jd_extractor.py  test_jwt_verifier.py  test_l0_filter.py  test_lever_adapter.py  test_llm_router.py  test_negotiation_playbook_prompt.py  test_passwords.py  test_pdf_render_client.py  test_pdf_renderer.py  test_personalisation_block.py  test_personalisation_validator.py  test_phase7_route_and_groq_dispatch.py  test_profile_extractor.py  test_profile_service_onboarding_collapse.py  test_rate_limit.py  test_resume_parser.py  test_rule_scorer.py  test_scanner_dedup.py  test_storage.py  test_subscription_entitlement.py  test_tokens.py
(+381 files in other folders)
